# chart

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
assets/shaders/: basic.frag  basic.vert
src/: app.rs  main.rs
src/components/: basic.frag  chart.rs
src/webgl/: context.rs  engine.rs
src/webgl/context/: program.rs
src/webgl/context/shader/: fragment.rs  vertex.rs
src/webgl/engine/: color.rs  draw.rs  perspective.rs  program.rs  renderer.rs  shader.rs  texture.rs  vertex.rs
src/webgl/engine/primitives/: transform.rs
src/webgl/engine/renderer/: layer.rs
src/webgl/engine/shader/: fragment.rs  vertex.rs
src/webgl/engine/vertex/: default.rs  layout.rs
