[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.19"
stdweb = "0.4.20"
gloo-render = "0.1.1"
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
wasm-logger = "0.2.0"
log = "0.4.17"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.6", features = ["js"] }
uuid = { version = "1.1.0", features = ["v4"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'WebGl2RenderingContext',
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGlContextAttributes',
  'WebGlContextEvent',
  'WebGlContextEventInit',
  'WebGlFramebuffer',
  'WebGlPowerPreference',
  'WebGlProgram',
  'WebGlQuery',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlSampler',
  'WebGlShader',
  'WebGlShaderPrecisionFormat',
  'WebGlSync',
  'WebGlTexture',
  'WebGlTransformFeedback',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebKitCssMatrix',
  'WebSocket',
  'WebSocketDict',
  'WebSocketElement',
  'WebglColorBufferFloat',
  'WebglDebugRendererInfo',
  'WebglDebugShaders',
  'WebglDepthTexture',
  'WebglDrawBuffers'
]
