[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.19"
stdweb = "0.4.20"
gloo-render = "0.1.1"
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
wasm-logger = "0.2.0"
log = "0.4.17"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.6", features = ["js"] }
uuid = { version = "1.1.0", features = ["v4"] }
owning_ref = "0.4.1"
nanoid = "0.4.0"
ab_glyph = "0.2.15"
glyph_brush = "0.7.4"
webgl2-glyph = "0.1.3"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
wasm-timer = "0.2.5"
wee_alloc = "0.4.5"
serde-wasm-bindgen = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
nalgebra = "0.31.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'WebGl2RenderingContext',
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGlContextAttributes',
  'WebGlContextEvent',
  'WebGlContextEventInit',
  'WebGlFramebuffer',
  'WebGlPowerPreference',
  'WebGlProgram',
  'WebGlQuery',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlSampler',
  'WebGlShader',
  'WebGlShaderPrecisionFormat',
  'WebGlSync',
  'WebGlTexture',
  'WebGlTransformFeedback',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebKitCssMatrix',
  'WebSocket',
  'WebSocketDict',
  'WebSocketElement',
  'WebglColorBufferFloat',
  'WebglDebugRendererInfo',
  'WebglDebugShaders',
  'WebglDepthTexture',
  'WebglDrawBuffers'
]

# [profile.release]
# panic = 'abort'
# codegen-units = 1
# opt-level = 'z'
# # opt-level = 's'
# lto = true